<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    >

    <ImageView
        android:id="@+id/ivATM"
        android:layout_width="wrap_content"
        android:layout_height="195dp"
        android:layout_margin="20dp"
        android:background="@drawable/bankofilearneasy"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        >




        <Button
            android:id="@+id/btnBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/balance"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            android:textStyle="bold"
            app:backgroundTint="@color/btnColor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        >
    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:background="@drawable/btn_bg"
        android:textStyle="bold"
        app:backgroundTint="@color/btnColor"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/deposit"
        />

    <Button
        android:id="@+id/btnWithdrawal"
        android:layout_width="150dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:background="@drawable/btn_bg"
        app:backgroundTint="@color/btnColor"
        android:text="@string/withdrawal"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        >

    <TextView
        android:id="@+id/tvMyBalance"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/my_balance"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@drawable/btn_bg"
        />

    <TextView
        android:id="@+id/tvChooseAmount"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/amount"
        android:background="@drawable/btn_bg"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/etUserInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginRight="50dp"
        android:visibility="invisible"
        android:layout_marginLeft="50dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:visibility="invisible"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:text="@string/submit"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        app:backgroundTint="@color/btnColor"
        />
    </LinearLayout>

</LinearLayout>